bk_ida/gccida/c3/store_fixed_bit_field
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_fixed_bit_field/src/expmed.c:1177:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v13; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_fixed_bit_field/src/expmed.c:1181:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode best_mode; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_fixed_bit_field/src/expmed.c:1182:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_fixed_bit_field/src/expmed.c:1189:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v25; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_fixed_bit_field/src/expmed.c:1202:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v38; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_fixed_bit_field/src/expmed.c:1213:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v49; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_fixed_bit_field/src/expmed.c:1224:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v60; // [rsp+10h] [rbp-38h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_fixed_bit_field/src/expmed.c:1234:44: error: invalid suffix 'xmode' on integer constant
if ( !v14 || v14 > mode_bitsize[*(short *)0xmode] ) 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_fixed_bit_field/src/expmed.c:1235:18: error: invalid suffix 'xmode' on integer constant
v13 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_fixed_bit_field/src/expmed.c:1236:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v15 = ( __int64)op0[1]; 
                ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_fixed_bit_field/src/expmed.c:1297:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v27.rtwint = ( __int64)value->fld[0]; 
                       ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_fixed_bit_field/src/expmed.c:1348:39: error: use of undeclared identifier 'machine_mode'
v41 = immed_double_const( v44, v46, ( machine_mode)( unsigned __int8)v24); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_fixed_bit_field/src/expmed.c:1348:54: error: expected expression
v41 = immed_double_const( v44, v46, ( machine_mode)( unsigned __int8)v24); 
                                                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_fixed_bit_field/src/expmed.c:1364:22: error: use of undeclared identifier 'machine_mode'
v33 = gen_lowpart( ( machine_mode)( unsigned __int8)v24, value); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_fixed_bit_field/src/expmed.c:1364:37: error: expected expression
v33 = gen_lowpart( ( machine_mode)( unsigned __int8)v24, value); 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_fixed_bit_field/src/expmed.c:1366:26: error: use of undeclared identifier 'machine_mode'
v33 = convert_to_mode( ( machine_mode)( unsigned __int8)v24, value, 1); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_fixed_bit_field/src/expmed.c:1366:41: error: expected expression
v33 = convert_to_mode( ( machine_mode)( unsigned __int8)v24, value, 1); 
                                        ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_fixed_bit_field/src/obj/expmed.o] Error 1
